# chess

./: README.md  start_all.sh
chess_bot/bot/: settings.py
frontend/: README.md  package.json
frontend/src/: main.jsx  router.jsx
frontend/src/chess/: MoveValidator.js
frontend/src/components/chess/: ChessBoard.jsx  CompactPlayerClock.jsx  GameControls.jsx  MoveHistory.jsx  Square.jsx
frontend/src/components/spectate/: SpectatorView.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useGameApi.js  useUserNotifications.js
frontend/src/pages/: BotGame.jsx  Friends.jsx  Game.jsx  Login.jsx  Register.jsx  Spectate.jsx
frontend/src/services/: api.js  gameService.js  socketService.js
frontend/src/styles/: Board.css
server/: pyproject.toml
server/accounts/: friend_views.py  redis_pubsub.py
server/core/: settings.py
server/game/: challenge_views.py  chess_engine.py  consumers.py  matchmaking.lua  matchmaking.py  models.py  routing.py  serializers.py  state.py  urls.py  user_consumer.py  views.py
server/game/actors/: db_actor.py  game_actor.py  system.py
server/game/migrations/: 0003_alter_move_unique_together_remove_move_game_and_more.py
